--- a/templates/design.html
+++ b/templates/design.html
@@ -139,7 +139,7 @@ body {
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
+  <a href="#default" class="logo">Dev-k</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
