--- a/templates/design.html
+++ b/templates/design.html
@@ -10,6 +10,8 @@
 body { 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('/static/bg.jpg');
+  background-size: cover;
 }
 
 .header {
