--- a/templates/design.html
+++ b/templates/design.html
@@ -270,7 +270,17 @@ body {
   
   
   
-  
+   <!-- Footer -->
+<footer >
+
+  <!-- Copyright -->
+  <div >© 2021 Copyright:
+    <a href="http://dev-k-copyright.herokuapp.com/"> site view__ Dev-k</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
   
  
 
