--- a/templates/design.html
+++ b/templates/design.html
@@ -139,7 +139,10 @@ body {
   
   
   
-  
+  .footer{
+     margin-bottom:20px;
+     margin-top:10px;
+  } 
   
   
   
@@ -272,13 +275,13 @@ body {
   
    <!-- Footer -->
 <footer >
-
+  <center>
   <!-- Copyright -->
-  <div >© 2021 Copyright:
+  <div class="footer">© 2021 Copyright:
     <a href="http://dev-k-copyright.herokuapp.com/"> site view__ Dev-k</a>
   </div>
   <!-- Copyright -->
-
+  </center>
 </footer>
 <!-- Footer -->
   
