--- a/templates/design.html
+++ b/templates/design.html
@@ -277,8 +277,8 @@ body {
 <footer >
   <center>
   <!-- Copyright -->
-  <div class="footer">© 2021 Copyright:
-    <a href="http://dev-k-copyright.herokuapp.com/"> site view__ Dev-k</a>
+  <div class="footer">© 2021 Copyright: 
+    <a href="http://dev-k-copyright.herokuapp.com/">Dev-k</a>
   </div>
   <!-- Copyright -->
   </center>
