--- a/templates/design.html
+++ b/templates/design.html
@@ -235,7 +235,7 @@ body {
     <div class="card__info">
       
       <div>
-        <a href="./" class="card__link">model</a>
+        <a href="https://expression-recogntn-copyright.herokuapp.com/" class="card__link">model</a>
       </div>
     </div>
   </div>
