--- a/templates/design.html
+++ b/templates/design.html
@@ -256,6 +256,26 @@ body {
       </div>
     </div>
   </div>
+  
+  <div class="card">
+    <img class="card__image" src="/static/paint.jpg" alt="">
+    <div class="card__content">
+      <p>
+        Paint iT
+      </p>
+      <p>
+        Learn and play with alphabet in canvas
+      </p>
+    </div>
+    <div class="card__info">
+      
+      <div>
+        <a href="https://paint-it-copyright.herokuapp.com/" class="card__link">model</a>
+      </div>
+    </div>
+  </div>
+  
+  
 </div>
 
 
@@ -274,6 +294,7 @@ body {
   
   
    <!-- Footer -->
+  </br></br>
 <footer >
   <center>
   <!-- Copyright -->
