--- a/templates/design.html
+++ b/templates/design.html
@@ -276,6 +276,25 @@ body {
   </div>
   
   
+  <div class="card">
+    <img class="card__image" src="/static/banner.png" alt="">
+    <div class="card__content">
+      <p>
+        Leaf Disease Classification
+      </p>
+      <p>
+        Details about Leaf disease and how it recovers.
+      </p>
+    </div>
+    <div class="card__info">
+      
+      <div>
+        <a href="https://dev-leaf-disease-classifier.herokuapp.com/" class="card__link">model</a>
+      </div>
+    </div>
+  </div>
+  
+  
 </div>
 
 
