--- a/templates/design.html
+++ b/templates/design.html
@@ -252,7 +252,7 @@ body {
     <div class="card__info">
       
       <div>
-        <a href="./" class="card__link">model</a>
+        <a href="https://object-tracking-yolov4.herokuapp.com/" class="card__link">model</a>
       </div>
     </div>
   </div>
