--- a/templates/design.html
+++ b/templates/design.html
@@ -206,19 +206,19 @@ body {
     </div>
   </div>
   <div class="card">
-    <img class="card__image" src="/static/sa.jpg" alt="">
+    <img class="card__image" src="/static/fakeoff.jpg" alt="">
     <div class="card__content">
       <p>
-        sentiment analysis
+        FakeOff
       </p>
       <p>
-        Details about sentiment analysis using BERT
+        Details about fake news analysis using BERT
       </p>
     </div>
     <div class="card__info">
    
       <div>
-        <a href="./" class="card__link">model</a>
+        <a href="https://fakeoff-copyright.herokuapp.com/" class="card__link">model</a>
       </div>
     </div>
   </div>
